# AI-RAG-Chatbot-Ollama

./: .gitignore  README.md  chatbot.py  docker-compose.yml
Backend/: Dockerfile  Dockerfile.whisper  chatbot.py  pyproject.toml  routes.py
Frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.vue
Frontend/src/assets/: base.css
Frontend/src/components/: ChatComponent.vue  FilesComponent.vue  MainLayout.vue  SidebarComponent.vue
Frontend/src/router/: index.js
