[tool.poetry]
name = "ai-rag-chatbot-ollama"
version = "0.1.0"
description = ""
authors = ["ssobii2 <subhanimran4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
chromadb = "^0.5.5"
langchainhub = "^0.1.20"
pypdf = "^4.3.1"
langchain-ollama = "^0.1.1"
langchain-chroma = "^0.1.2"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.6"
openai-whisper = "^20231117"
ffmpeg = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
