[tool.poetry]
name = "ai-rag-chatbot-ollama"
version = "0.1.0"
description = ""
authors = ["ssobii2 <subhanimran4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
chromadb = "^0.5.5"
langchainhub = "^0.1.20"
pypdf = "^4.3.1"
langchain-ollama = "^0.1.1"
langchain-chroma = "^0.1.2"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.6"
pydub = "^0.25.1"
unstructured = "^0.15.9"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
jq = "^1.8.0"
langchain-openai = "^0.1.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
